style(layout): fix text overlap and adjust image sizing when stats are removed

--- a/editor-components/stats/stats35/stats35.module.scss
+++ b/editor-components/stats/stats35/stats35.module.scss
@@ -14,6 +14,33 @@
         }
     }
 
+    &.has-media {
+        .max-content {
+            padding-right: 0;
+        }
+    }
+
+    .media-wrapper {
+        position: relative;
+        width: 100%;
+        min-height: 500px;
+
+        .background-image {
+            position: absolute;
+            inset: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .overlay {
+            position: absolute;
+            inset: 0;
+            background: var(--composer-overlay-color);
+            z-index: 1;
+        }
+    }
+
     .background-media {
         position: absolute;
         top: 0;
@@ -200,6 +227,9 @@
         }
 
         &.has-media {
+            .max-content {
+                padding-right: unset;
+            }
             .content-wrapper {
                 gap: 0;
             }
